--- a/Mdev.mw
+++ b/Mdev.mw
@@ -1,267 +1,85 @@
-<languages />
-<translate>
-<!--T:1-->
-{{Lowercase title}}
+The aim of this page is to document how to replace udev in Linux with mdev, thus allowing a separate /usr partition, without an initramfs. The auther uses Gentoo Linux with Icewm as the WM. The instructions here should be applicable to other distros, assuming you can make the necessary changes.
+==Will mdev work on my system?==
+I run a simple Gentoo install, using ICEWM, and no "desktop environment". An xorg.conf is not required on my system. Note that a "desktop environment" is not required to run Abiword, Firefox, Gimp, Gnumeric, etc. However, "Koffice apps" like Kmail seem to pull in most of KDE as a dependancy. In general, if you use KDE or lvm2, you may have problems, and may not be able to get by with mdev. One beta tester reports getting close with lvm2, but it's not there yet. 
 
-<!--T:2-->
-This article [[Article description::documents how to replace [[udev]] in Linux with mdev, thus allowing a separate {{Path|/usr}} partition, without an [[initramfs]].]] The author uses Gentoo Linux with IceWM as the window manager. The instructions here should be, with some small adjustments, applicable to other distributions.
+There is one more sanity check that Gentoo users can run to check for udev dependancy. I don't think this can be duplicated in other distros.
 
-== Will mdev work on my system? == <!--T:3-->
+===Sanity check===
+To ''/etc/portage/package.mask'', add the line
+<pre>sys-fs/udev</pre>
+Execute the two commands:
+<pre>USE="-udev" emerge -pv system
+USE="-udev" emerge -pv world</pre>
+If the only errors you get are for not being able to re-install udev as required by virtual/dev-manager, you can proceed to the next stage. Otherwise, remove the <tt>sys-fs/udev</tt> line from ''/etc/portage/package.mask'' and forget about mdev.
+==Software requiring extra steps==
+===GNOME 2===
+GNOME version 2 has been made to work under mdev.
+# Rebuild xorg-server without udev support
+#* In Gentoo, build with '''emerge xorg-server'''
+#* If you're running a different distro, use your package manager.
+# Configure the keyboard and mouse explicitly in ''/etc/X11/xorg.conf'' (or wherever else you keep your ''xorg.conf'').
+#* Edit the two '''InputDevice''' sections to look like this. The critical lines are noted.
+<pre>    Section "InputDevice"
+            Identifier  "Keyboard0"
+            Driver      "evdev"                       # Critical
+            Option      "Device" "/dev/input/event3"  # Also critical
+    EndSection
 
-<!--T:4-->
-The {{c|mdev}} application is definitely suitable as long as the system does not use a full-fledged desktop environment. Note that a desktop environment is not required to run AbiWord, Firefox, GIMP, Gnumeric, etc. However, KOffice applications like KMail seem to pull in most of KDE as a dependency. In general, when using KDE or GNOME, {{c|mdev}} is not suitable. Also using [[LVM]] might be troublesome.
+    Section "InputDevice"
+            Identifier  "Mouse0"
+            Driver      "evdev"                       # Critical
+            Option      "Protocol" "auto"
+            Option      "Device" "/dev/input/event4"  # Also critical
+            Option      "ZAxisMapping" "4 5 6 7"
+    EndSection</pre>
+===ATI/AMD binary blobs===
+Some ATI/AMD Radeon cards require binary blobs. The Gentoo radeon-ucode ebuild pulls down all the binary blobs available at [http://people.freedesktop.org/~ag5f/radeon_ucode/ http://people.freedesktop.org/~ag5f/radeon_ucode/] to support many different models.
 
-<!--T:5-->
-It will work very well when using the default Gentoo profiles:
+If I leave the binary blobs in the library directory, the kernel needs udev to figure out which one of the many binary blobs to load. If I remove all the other binary blobs, leaving only the correct one in the library directory, it loads automatically.
+==Warning / Disclaimer==
+''Proceed only if the above stages don't reveal any udev dependencies.'' Furthermore:
+* This is a beta.
+* Use a spare test machine or a VM.
+* If you don't follow the instructions correctly, the result may be an unbootable Linux.
+* Even if you do follow the instructions correctly, the result may be an unbootable Linux.
+==Replacing udev with mdev==
+===Setting up your kernel for devtmpfs===
+Set up your kernel to support and automount a devtmpfs filesystem at ''/dev''. If you prefer to edit ''.config'' directly, set <tt>CONFIG_DEVTMPFS=y</tt> and <tt>CONFIG_DEVTMPFS_MOUNT=y</tt>.
 
-<!--T:6-->
-* ''default/linux/x86/13.0''
-* ''default/linux/amd64/13.0''
-
-<!--T:7-->
-List the currently used profile by using following command:
-
-<!--T:8-->
-{{Cmd|eselect profile list|output=<pre>
-Current /etc/portage/make.profile symlink:
-  default/linux/amd64/13.0
-</pre>}}
-
-<!--T:9-->
-{{Note|Recent versions of evdev (as provided through {{Package|x11-drivers/xf86-input-evdev}}) and {{Package|www-client/chromium}} require udev. They will not build without it.}}
-
-<!--T:10-->
-There is one more sanity check that Gentoo users can run to check for udev dependency.
-
-=== Sanity check === <!--T:11-->
-
-<!--T:12-->
-Get a general overview which packages might depend on udev. The output could look similar to the one shown below:
-
-<!--T:13-->
-{{Cmd|equery d udev|output=<pre>
- * These packages depend on udev:
-media-libs/mesa-9.0.1 (gbm ? virtual/udev)
-sys-apps/hwids-20130329 (udev ? >=virtual/udev-197-r1)
-sys-apps/util-linux-2.22.2 (udev ? virtual/udev)
-virtual/dev-manager-0 (virtual/udev)
-x11-base/xorg-server-1.13.4 (udev ? >=virtual/udev-150)
-x11-drivers/xf86-video-intel-2.20.13 (udev ? virtual/udev)
-x11-libs/cairo-1.10.2-r3 (drm ? >=virtual/udev-136)
-</pre>}}
-
-<!--T:14-->
-Add the following line to the {{Path|/etc/portage/package.mask/mdev}} file (which can be created if it does not exist yet):
-
-<!--T:15-->
-{{FileBox|filename=/etc/portage/package.mask/mdev|title=Mask away udev|1=
-sys-fs/udev
-}}
-
-<!--T:16-->
-Disable the <code>udev</code> USE flag globally in {{Path|/etc/portage/make.conf}}:
-
-<!--T:17-->
-{{RootCmd|euse -D udev}}
-
-<!--T:18-->
-Rebuild all packages with the new <code>-udev</code> USE flag
-
-<!--T:19-->
-{{Emerge|params=-uDNvp|@world}}
-
-<!--T:20-->
-If the only error that comes up is that Portage is not able to re-install udev as required by {{Package|virtual/dev-manager}}, proceed to the next stage. Otherwise, {{Package|sys-fs/udev}} might be an hard dependency of one or more packages installed on the system.
-
-== Software requiring extra steps == <!--T:21-->
-
-=== ATI/AMD binary blobs === <!--T:22-->
-
-<!--T:23-->
-Some ATI/AMD Radeon cards require binary blobs. The Gentoo {{Package|sys-firmware/radeon-ucode}} package pulls in all the binary blobs available at [http://people.freedesktop.org/~ag5f/radeon_ucode/ http://people.freedesktop.org/~ag5f/radeon_ucode/] to support many different models.
-
-<!--T:24-->
-With all the binary blobs in the library directory, the kernel needs udev to figure out which one of the many binary blobs to load. If all but one of the binary blobs are removed, leaving only the correct one in the library directory, the binary blob is loaded automatically.
-
-== Replacing udev with mdev == <!--T:25-->
-
-<!--T:26-->
-{{Warning|This is a critical step which might result in a non-bootable Linux system. Only proceed if the above approach has not revealed any additional udev dependencies.}}
-
-=== Setting up the kernel for devtmpfs === <!--T:27-->
-
-<!--T:28-->
-Set up the kernel to support and automount a devtmpfs [[filesystem]] at {{Path|/dev}}:
-
-<!--T:29-->
-{{KernelBox|title=Enabling devtmpfs|1=
-Device Drivers --->
-    Generic Driver Options --->
-        [*] Maintain a devtmpfs filesystem to mount at /dev
-        [*] Automount devtmpfs at /dev, after the kernel mounted the rootfs
-}}
-
-<!--T:30-->
-Once the changes have been made, rebuild the kernel. Do '''NOT''' reboot yet.
-
-=== Emerging busybox === <!--T:31-->
-
-<!--T:32-->
-Make sure that the <code>mdev</code> USE flag is set for {{Package|sys-apps/busybox}}. The <code>static</code> USE flag is probably also a good idea. In the {{Path|/etc/portage/package.use/mdev}} file, add the follwoing line:
-
-<!--T:33-->
-{{FileBox|filename=/etc/portage/package.use/mdev|1=
-sys-apps/busybox static mdev}}
-
-<!--T:34-->
-Now, (re)install busybox:
-
-<!--T:35-->
-{{Emerge|params+=--oneshot|busybox}}
-
-=== Mounting devpts === <!--T:36-->
-
-<!--T:37-->
-The devpts filesystem exhibits non-standard behavior. It does not automount, at bootup, or with {{c|mount -a}}. An explicit {{c|mount devpts}} command is required. The standard solution for udev-based systems is to run {{c|rc-update add udev-mount sysinit}} as root, and have the udev-mount script do the mounting at startup. An mdev-based system will probably not have udev installed. An alternative way to do this at bootup is to include the command {{c|mount devpts}} in a shell script in {{Path|/etc/local.d/}}. In this example, the file will be named {{Path|/etc/local.d/000.start}}
-
-<!--T:38-->
-Another side-effect of not using udev-mount is that {{Path|/dev/shm}} is only writable by root. The command {{c|chmod 1777 /dev/shm}} is required to restore the standard behavior. This command will also be run from the script at startup.
-
-<!--T:39-->
-{{FileBox|filename=/etc/local.d/000.start|title=Mount of devpts at bootup and change /dev/shm permissions|lang=bash|1=
-#!/bin/bash
-mount devpts
-chmod 1777 /dev/shm
-}}
-
-<!--T:40-->
-{{Note|Scripts used in {{Path|/etc/local.d/}}
-* must be executable
-* must have the extension ".start" in order to run at startup
-* must have the extension ".stop" in order to run at shutdown
-}}
-
-=== Replace the udev service === <!--T:41-->
-
-<!--T:42-->
-Remove udev from the services list and replace it with mdev:
-
-<!--T:43-->
-{{RootCmd
-|rc-update del udev sysinit
-|rc-update add mdev sysinit
-}}
-
-=== Reboot === <!--T:44-->
-
-<!--T:45-->
-Reboot to the new kernel. The system should now be running using mdev.
-
-=== Cleanup === <!--T:46-->
-
-<!--T:47-->
-Remove udev from the system:
-
-<!--T:48-->
-{{RootCmd|emerge --unmerge sys-fs/udev}}
-
-<!--T:49-->
-In the {{Path|/etc/portage/package.mask}} file (or a file in this directory), add <code>sys-fs/udev</code>.
-
-<!--T:50-->
-This now results in a completely udev-free machine.
-
-== Setting up a USB printer running under CUPS == <!--T:51-->
-
-=== Make 'find' available at early boot-time === <!--T:52-->
-
-<!--T:53-->
-{{RootCmd
-|cd /bin
-|ln -s /bin/busybox find
-}}
-
-=== Rebuild the kernel === <!--T:54-->
-
-<!--T:55-->
-For libusb (and hence CUPS) to see the USB ports, set <code>CONFIG_USB_DEVICE_CLASS=y</code> and <code>CONFIG_USB_DEVICEFS=y</code> in the kernel configuration.  Also enable <code>CONFIG_USB_PRINTER=y</code>, despite the injunction in the cups-1.5.2 ebuild to disable it.  When using {{c|make menuconfig}}, these items are found here:
-
-<!--T:56-->
-{{KernelBox|title=Enabling generation of USB devices at boot time|1=
+If you prefer '''make menuconfig''', the route is as shown below. Note that the "Automount devtmpfs..." option won't appear until you enable the "Maintain a devtmpfs..." option.
+<pre>make menuconfig
   Device Drivers --->
-    [*] Support for Host-side USB
-      [*] USB device filesystem [DEPRECATED]
-      [*] USB device class-devices [DEPRECATED]
-    [*] USB Printer support
-}}
+    Generic Driver Options --->
+      [*] Maintain a devtmpfs filesystem to mount at /dev
+      [*] Automount devtmpfs at /dev, after the kernel mounted the rootfs</pre>
 
-<!--T:57-->
-{{Note|Don't worry about the deprecation warnings.}}
+Once you've made the changes, rebuild the kernel. Do '''NOT''' reboot yet.
+===Emerging busybox===
+For our circumstance, you will need the <tt>mdev</tt> USE flag set for busybox. The <tt>static</tt> USE flag is probably also a good idea. In the ''/etc/portage/package.use'' file, add the line
+<pre>sys-apps/busybox static mdev</pre>
+Now, you may run '''emerge sys-apps/busybox'''.
+If you're using a distro other than Gentoo, or building Busybox manually, do whatever necessary in your situation to enable the mdev option.
+===Creating /sbin/linuxrc===
+You will need ''/sbin/linuxrc'' to contain at least
+<pre>#!/bin/busybox ash
+mount -t proc proc /proc
+mount -t sysfs sysfs /sys
+exec /sbin/init</pre>
 
-=== Configure the new kernel into the bootloader and reboot into it === <!--T:58-->
+This should be enough for most users. If you have an unusual setup, you may need to place additional steps in your ''/sbin/linuxrc''. Remember to run '''chmod 744 /sbin/linuxrc''' to make the file executable.
+===Configure the bootloader===
+Append <tt>init=/sbin/linuxrc</tt> to your kernel command line. If you use lilo, remember to re-run lilo to implement the changes. If you use a different bootloader, apply any necessary equivalent steps.
+===Replace the udev service===
+Remove udev from the services list, replacing it with mdev:
+<pre>rc-update del udev sysinit
+rc-update add mdev sysinit</pre>
+===Reboot===
+Reboot to your new kernel. You should now be running without using udev.
+===Cleanup===
+Remove udev from your system by running '''emerge --unmerve sys-fs/udev'''.
+In the ''/etc/portage/package.mask'', append the line sys-fs/udev''. Create ''/etc/portage/package.mask'' if it doesn't already exist.
 
-=== Verify the presence of the new device nodes === <!--T:59-->
+You should now have a completely udev-free machine.
 
-<!--T:60-->
-A hierarchy of device nodes should be present under {{Path|/dev/bus/usb/}}. When switching on the printer, a node for it should occur at {{Path|/dev/lp0}}. {{c|lsusb}} should run successfully, and this should display the printer's details.
-
-=== Configure the printer in CUPS === <!--T:61-->
-
-<!--T:62-->
-Configure CUPS in the [[Printing|usual way]].  CUPS should find the printer, and will give it a URI like {{Path|parallel:/dev/lp0}}.
-
-== Troubleshooting == <!--T:63-->
-
-=== Linux modules missing at boot sequence === <!--T:64-->
-
-<!--T:65-->
-If Linux modules are required and not loaded on boot after migration, execute one or more of the following solutions:
-
-<!--T:66-->
-* Add Linux modules to <code>*.conf</code> files in {{Path|/etc/modules-load.d/}}
-
-<!--T:67-->
-* Compile modules into the Linux kernel, without the need of loading them on demand.
-
-<!--T:68-->
-* Write a custom module loader:
-: {{FileBox|filename=/sbin/hotplug|lang=bash|1=
-#!/bin/sh
-test -n "$MODALIAS" && modprobe "$MODALIAS";
-exec /sbin/mdev
-}}
-
-<!--T:69-->
-Install it as the hotplug handler instead of mdev.  Note that the earlier this gets executed, the better.  Consider naming this script {{Path|/sbin/hotplug}}, since that is the default value of {{Path|/proc/sys/kernel/hotplug}} (or change the default value in the kernel configuration).
-
-== Miscellaneous == <!--T:70-->
-
-<!--T:71-->
-{{Note|This set of instructions was originally written by Walter Dnes and hosted at his personal website. It was imported to the Gentoo wiki with some editing by [[User:Short Circuit|Michael Mol]] per discussion on the gentoo-user mailing list.}}
-
-<!--T:72-->
-* mdev unlike udev does not support auto-modules loading. Create files ending with <code>.conf</code> in {{Path|/etc/modules-load.d/}} and put all the modules there that should be loaded (nvidia, wl, etc.) one per line. Customize options via files ending with <code>.conf</code> in {{Path|/etc/modprobe.d}} (see {{c|man 5 modprobe.d}} for syntax). It might be necessary to move the module configuration to this location.
-
-<!--T:73-->
-* {{c|mdev -s}} does not create {{Path|/dev/mapper}} nodes. Either manually create them or use {{c|dmsetup mknodes}} from lvm2. It is a good idea to add it after {{c|mdev -s}} in the init script.
-
-<!--T:74-->
-* Use mouse and keyboard drivers for xorg inputs. Evdev needs udev to be built. Mousedrv (for the mouse driver) may conflict with the synaptic driver when both are loaded.
-
-<!--T:75-->
-* The Kernel configuration option <var>CONFIG_INPUT_EVDEV</var> not only provides the keyboard and mouse as input device events, it will provide lid and button events to acpid as well.
-
-== See also == <!--T:76-->
-
-<!--T:77-->
-* {{See also|Mdev/Automount USB‎}}
-
-== External resources == <!--T:78-->
-
-<!--T:79-->
-* [https://github.com/slashbeast/mdev-like-a-boss mdev like a boss] project.
-
-</translate>
-
-[[Category:Core system]]
-[[Category:Daemons]]
+==Notes==
+This set of instructions was originally written by Walt Dnes and hosted at [http://www.waltdnes.org/mdev/ http://www.waltdnes.org/mdev/]. It was imported to the Gentoo wiki with some editing by [[User:Short Circuit|Michael Mol]] per discussion on the gentoo-user mailing list.
