Initial Idea Creation

--- a/Google_Summer_of_Code%2F2012%2FIdeas%2FPort_Fedora_UEFI_Support.mw
+++ b/Google_Summer_of_Code%2F2012%2FIdeas%2FPort_Fedora_UEFI_Support.mw
@@ -1,21 +1,15 @@
 <!-- Important: The title must be the same as the page title, otherwise the link URL will be wrong!
                 Also, no line break after the page title!  -->
-{{GSoCIdea|Port Fedora UEFI Support|year=2012|
+{{GSoCIdea
+|Port Fedora UEFI Support|
 <!-- Description goes here: --> 
-Computer manufacturers are adopting UEFI as a BIOS replacement on amd64 systems, but Gentoo is currently unable to boot on such systems using GRUB 0.97. Intel wrote patches for UEFI support that were adopted by Fedora's GRUB fork. Porting those patches from [http://pkgs.fedoraproject.org/gitweb/?p{{=}}grub.git;a{{=}}summary Fedora's GRUB fork] to sys-boot/grub is necessary if sys-boot/grub is to remain a viable bootloader in Gentoo.
-
-There are two existing issues in sys-boot/grub that must be addressed in conjunction with this port. The first is that sys-boot/grub does not compile correctly with GCC 4.6, which is {{Bug|360513}}. The second is that sys-boot/grub's grub-probe utility relies on /dev/root, which is newer versions of udev remove. A proper port must compile properly with GCC 4.6 without any dependence on /dev/root.
-
-In addition, sys-boot/grub is GPLv2 licensed, so these improvements may not involve the use of any GPLv3 code.
+Port UEFI support from Fedora's GRUB fork to sys-boot/grub.
 |
 <!-- List contacts: -->
 * [mailto:ryao@cs.stonybrook.edu Richard Yao]
 |
 <!-- List required skills: -->
 * Understanding of Gentoo Linux boot process
-* Knowledge of C and x86 assembly
+* Knowledge of C
 * Knowledge of Operating Systems
-* Knowledge of QEMU (or access to UEFI capable hardware)
 }}
-
-[[Category:GSoC 2012 Ideas]]
